# Reversi

./: .gitignore  .pylintrc  README.md  ai_benchmark.py  main(humanvshuman).py  main.py  pyproject.toml
AI/: ai_move.py  evaluate.py  iterative_deepening_midgame.py  minimax_endscore.py  minimax_midgame.py  random_ai.py  reorder.py
reversi/: board.py
tests/: test_ai_move.py  test_board.py  test_evaluate.py  test_iterative_deepening_midgame.py  test_minimax_endscore.py  test_minimax_midgame.py  test_reorder.py
