[tool.poetry]
name = "reversi"
version = "0.1.0"
description = "reversi game"
authors = ["HVa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = ">=4.0.3,<5.0.0"
pytest = ">=9.0.1,<10.0.0"
coverage = ">=7.12.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
